clusters/cluster0/kubernetes/apps/media/ombi/app/ombi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: ombi
  ports:
     # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3579
      protocol: TCP
      targetPort: 3579
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      # nodePort: 31400
