clusters/cluster0/kubernetes/apps/media/ombi/app/ombi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: biggs.dog
spec:
  ingressClassName: external
  rules:
  - host: ombi.biggs.dog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: ombi-service
            port:
              number: 3579
